--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,13 @@
 <app-header></app-header>
-<!-- <div class="">
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./../assets/img/black-widow-character-guide.jpg" class="d-block w-100 h-75 img-responsive" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="./../assets/img/boss-baby-2-seo-share2.jpg" class="d-block w-100 h-75 img-responsive" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="./../assets/img/5k-dwayne-johnson-karen-gillan-kevin-hart-wallpaper-preview.jpg" class="d-block w-100 h-75 img-responsive" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="./../assets/img/images.jpg" class="d-block w-100 h-75 img-responsive" alt="...">
-      </div>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-3 col-lg-1 offset-lg-1">
+      <app-sort></app-sort>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    <div class="col-6 col-lg-6 col-sm-9 offset-lg-1 offset-sm-3">
+      <app-search></app-search>
+    </div>
   </div>
-</div> -->
+</div>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
