--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -17,7 +17,7 @@
     <button mat-button color="primary">SHARE</button>
   </mat-card-actions> -->
   <div class="d-flex justify-content-between">
-    <mat-card-title>
+    <mat-card-title class="fs-5">
       {{movieIn.title}}
     </mat-card-title>
     <span class="badge bg-secondary fs-6">{{movieIn.vote_count}}</span>
