--- a/src/app/components/sort/sort.component.html
+++ b/src/app/components/sort/sort.component.html
@@ -1,6 +1,6 @@
 <select class="form-select" aria-label="Default select example">
-  <option selected>All</option>
-  <option value="28">Action</option>
-  <option value="12">Adventure</option>
-  <option value="16">Animation</option>
+  <option selected>Sort</option>
+  <option value="popularity">Popularity</option>
+  <option value="vote_count">Vote Count</option>
+  <option value="vote_average">Vote Average</option>
 </select>
