--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,24 +1,29 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">A-Movie Db</a>
+      <a class="navbar-brand fw-bolder" routerLink="home">A-Movie Db</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav text-center me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-dark fw-bolder" routerLink="/discover">Discover</a>
+          </li>
+        </ul>
         <ul class="navbar-nav text-center ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><i class="fab fs-3 fa-linkedin"></i></a>
+            <a class="nav-link text-dark" aria-current="page" href="#"><i class="fab fs-3 fa-linkedin"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="fab fs-3 fa-twitter"></i></a>
+            <a class="nav-link text-dark" href="#"><i class="fab fs-3 fa-twitter"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1"><i class="fab fs-3 fa-github"></i></a>
+            <a class="nav-link text-dark" href="#" tabindex="-1"><i class="fab fs-3 fa-github"></i></a>
           </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search">
-          <button class="btn btn-secondary" type="submit">Search</button>
+          <button class="btn btn-dark" type="submit">Search</button>
         </form>
       </div>
     </div>
