--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,10 +1,11 @@
-<mat-card class="example-card">
+<mat-card class="example-card" [routerLink]="['/movie', movieIn.id]">
   <!-- <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>Shiba Inu</mat-card-title>
     <mat-card-subtitle>Dog Breed</mat-card-subtitle>
   </mat-card-header> -->
-  <img mat-card-image [src]="tmdbImageUrl" alt="Photo of a Shiba Inu">
+  <img mat-card-image *ngIf="movieIn.poster_path !== ''" [src]="tmdbImageUrl" alt="Photo of a Shiba Inu">
+  <!-- <ngx-shimmer-loading *ngIf="movieIn.poster_path == ''" [shape]="'square'" [width]="'100%'"></ngx-shimmer-loading> -->
   <!-- <mat-card-content>
     <p>
       The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
@@ -23,3 +24,4 @@
     <span class="badge bg-secondary fs-6">{{movieIn.vote_count}}</span>
   </div>
 </mat-card>
+
