--- a/src/app/page/discover/discover.component.html
+++ b/src/app/page/discover/discover.component.html
@@ -1,10 +1,17 @@
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-3 col-lg-1 offset-lg-1">
+      <app-sort></app-sort>
+    </div>
+    <div class="col-6 col-lg-6 col-sm-9 offset-lg-1 offset-sm-3">
+      <app-search></app-search>
+    </div>
+  </div>
+</div>
 <div class="container-fluid mt-3" *ngIf="movies">
   <div class="row">
     <div class="col-lg-4 mt-lg-5 mt-3"
-      *ngFor="let movie of movies.results | paginate: {
-        itemsPerPage: 20,
-        currentPage: page,
-        totalItems: movies.results.length}">
+      *ngFor="let movie of movies.results">
       <app-card [movieIn]="movie"></app-card>
     </div>
   </div>
