--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,28 +1,43 @@
-<div class="container-fluid mt-3" *ngIf="movies$ | async as movies">
+<div class="container mt-5">
   <div class="row">
-    <div class="col-lg-4 mt-lg-5"
-      *ngFor="let movie of movies.results | paginate: {
-        itemsPerPage: 20,
-        currentPage: page,
-        totalItems: movies.results.length}">
-      <app-card [movieIn]="movie"></app-card>
+    <div class="col-3 col-lg-1 offset-lg-1">
+      <app-sort></app-sort>
+    </div>
+    <div class="col-6 col-lg-6 col-sm-9 offset-lg-1 offset-sm-3">
+      <app-search></app-search>
     </div>
   </div>
-  <div class="text-right mt-4 mb-4">
+</div>
 
-    <mat-paginator [length]="length"
-      [pageSize]="pageSize"
-      [pageSizeOptions]="pageSizeOptions"
-      (page)="handlePageEvent($event)"
-      aria-label="Select page">
-    </mat-paginator>
+<div *ngIf="loaded">
+  <div class="container-fluid mt-3" *ngIf="movies">
+    <div class="row">
+      <div class="col-lg-4 mt-3"
+        *ngFor="let movie of movies.results">
+        <app-card [movieIn]="movie"></app-card>
+      </div>
+    </div>
+    <div class="text-right mt-4 mb-4">
 
-    <!-- <pagination-controls
-      (pageChange)="page = $event"
-      [autoHide]="true"
-      [responsive]="true"
-      previousLabel="<"
-      nextLabel=">"
-    ></pagination-controls> -->
+      <mat-paginator [length]="length"
+        [pageSize]="pageSize"
+        [pageSizeOptions]="pageSizeOptions"
+        (page)="handlePageEvent($event)"
+        aria-label="Select page">
+      </mat-paginator>
+    </div>
   </div>
 </div>
+
+
+<div class="container mt-5" *ngIf="!loaded">
+  <ngx-shimmer-loading   [width]="'100%'" [height]="'500px'"></ngx-shimmer-loading>
+</div>
+
+
+
+<!-- <div class="container mt-5" *ngIf="!loaded">
+  <div class="alert alert-warning" role="alert">
+    {{ errorMessage$ }}
+  </div>
+</div> -->
