--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -17,11 +17,20 @@
     <button mat-button color="link">LIKE</button>
     <button mat-button color="primary">SHARE</button>
   </mat-card-actions> -->
-  <div class="d-flex justify-content-between">
+  <div class="">
     <mat-card-title class="fs-5">
-      {{movieIn.title}}
+      <h3>{{movieIn.title}}</h3>
     </mat-card-title>
-    <span class="badge bg-secondary fs-6">{{movieIn.vote_count}}</span>
+    <mat-card-subtitle class="d-flex justify-content-between">
+      <small>Vote:
+        <i class="badge bg-dark fs-6">{{movieIn.vote_count}}</i>
+      </small>
+      <small>Popularity:
+        <i class="badge bg-success fs-6">{{movieIn.popularity}}</i>
+      </small>
+      <small>Average:
+        <i class="badge bg-primary fs-6">{{movieIn.vote_average}}</i>
+      </small>
+    </mat-card-subtitle>
   </div>
 </mat-card>
-
