REMOVED SORTED FUNCTIONALITY FOR NOW

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,11 +6,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav text-center me-auto mb-2 mb-lg-0">
+      <!-- <ul class="navbar-nav text-center me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link text-dark fw-bolder" routerLink="/discover">Discover</a>
         </li>
-      </ul>
+      </ul> -->
       <ul class="navbar-nav text-center ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link text-dark" aria-current="page" href="#"><i class="fab fs-3 fa-linkedin"></i></a>
