--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -3,17 +3,18 @@
     <div class="col-lg-3"></div>
     <div class="col-lg-6 col-sm-12">
       <div class="row">
-        <mat-form-field class="col-lg-3 col-sm-12">
+        <!-- <mat-form-field class="col-lg-3 col-sm-12">
           <mat-label>Sort</mat-label>
           <mat-select [formControl]="sortOption" (selectionChange)="sort(sortOption.value)">
+            <mat-option value=""></mat-option>
             <mat-option value="popularity">Popularity</mat-option>
             <mat-option value="vote_count">Vote</mat-option>
             <mat-option value="vote_average">Vote Average</mat-option>
           </mat-select>
-        </mat-form-field>
+        </mat-form-field> -->
         <mat-form-field class="col-lg-9 col-sm-12">
-          <input type="text" class="form-control" id="search" matInput [formControl]="searchOption" placeholder="Search"
-            [matAutocomplete]="auto">
+          <input type="text" class="form-control" (change)="filter(searchOption.value)" id="search" matInput
+            [formControl]="searchOption" placeholder="Search" [matAutocomplete]="auto">
           <mat-autocomplete #auto='matAutocomplete'>
             <mat-option *ngFor="let option of filterOption$ | async" [value]="option.title">
               {{ option.title }}
